# ITKMontage

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: build-test-package.yml
examples/: CMakeLists.txt  CompleteMontage.cxx  ImageCompareCommand.cxx  Montage2D.cxx  RefineMontage.cxx  RefineMontage2D.cxx  ResampleMontage.cxx
include/: itkMaxPhaseCorrelationOptimizer.h  itkMaxPhaseCorrelationOptimizer.hxx  itkNMinimaMaximaImageCalculator.h  itkParseTileConfiguration.h  itkPhaseCorrelationImageRegistrationMethod.h  itkPhaseCorrelationImageRegistrationMethod.hxx  itkPhaseCorrelationOperator.h  itkPhaseCorrelationOperator.hxx  itkPhaseCorrelationOptimizer.h  itkPhaseCorrelationOptimizer.hxx  itkPhaseFrequencyCorrelationOptimizer.h  itkTileConfiguration.h  itkTileMergeImageFilter.h  itkTileMergeImageFilter.hxx  itkTileMontage.h  itkTileMontage.hxx
src/: CMakeLists.txt  itkParseTileConfiguration.cxx
test/: CMakeLists.txt  itkInMemoryMontageTest2D.cxx  itkInMemoryMontageTestHelper.hxx  itkMontagePCMTestFiles.cxx  itkMontageTest.cxx  itkMontageTestHelper.hxx  itkMontageTestOMC.cxx  itkMontageTruthCreator.cxx  itkPairwiseTestHelper.hxx  itkPhaseCorrelationImageRegistrationMethodTestFiles.cxx
test/Input/Tiles/: _readme.txt
